--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@remix-run/react": "^1.17.0",
     "@remix-run/serve": "^1.17.0",
     "framer-motion": "^6.5.1",
+    "highlight": "^0.2.4",
     "isbot": "^3.6.8",
+    "marked": "^5.1.0",
+    "marked-highlight": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight": "^0.15.0",
     "react-icons": "^4.9.0",
     "remix-flat-routes": "^0.5.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.0",
     "@remix-run/eslint-config": "^1.17.0",
+    "@types/marked": "^5.0.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
