--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
     "react-icons": "^4.9.0",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^6.0.0",
     "remix-flat-routes": "^0.5.8"
   },
@@ -36,6 +37,7 @@
     "@types/marked": "^5.0.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   },
