--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
+    "theme": "chakra-cli tokens ./app/styles/ExtendedTheme.tsx",
     "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc"
@@ -32,6 +33,7 @@
     "remix-flat-routes": "^0.5.8"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^2.4.1",
     "@remix-run/dev": "^1.17.0",
     "@remix-run/eslint-config": "^1.17.0",
     "@types/marked": "^5.0.0",
