--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-highlight": "^0.15.0",
     "react-icons": "^4.9.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-transition-group": "^4.4.5",
     "rehype-highlight": "^6.0.0",
     "remix-flat-routes": "^0.5.8"
   },
@@ -42,6 +43,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/react-transition-group": "^4.4.6",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   },
