--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-highlight": "^0.15.0",
     "react-icons": "^4.9.0",
+    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5",
     "rehype-highlight": "^6.0.0",
