--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.7.2",
     "rehype-highlight": "^6.0.0",
     "remix-flat-routes": "^0.5.8"
   },
