--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highlight": "^0.2.4",
     "highlight.js": "^11.8.0",
     "isbot": "^3.6.8",
+    "markdown-to-jsx": "^7.2.1",
     "marked": "^5.1.0",
     "marked-highlight": "^2.0.1",
     "react": "^18.2.0",
